Degreework-Preliminar-Final-Version

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -363,3 +363,117 @@
   note     = {Universidad Politécnica de Madrid, ETSI Sistemas Informáticos. Madrid 2015. [En línea] Disponible en: \url{https://oa.upm.es/44208/3/TFM_RODRIGO_ANTONIO_LOPEZ_ROSCIANO_JOSE_ALFREDO_PECH_MONTEJO.pdf}},
   language = {Spanish},
 }
+
+@article{BlandAltman1986,
+  title={Statistical methods for assessing agreement between two methods of clinical measurement},
+  author={Bland, J. Martin and Altman, Douglas G.},
+  journal={The Lancet},
+  volume={327},
+  number={8476},
+  pages={307--310},
+  year={1986},
+  publisher={Elsevier}
+}
+
+@article{ShroutFleiss1979,
+  title={Intraclass correlations: uses in assessing rater reliability},
+  author={Shrout, Patrick E. and Fleiss, Joseph L.},
+  journal={Psychological Bulletin},
+  volume={86},
+  number={2},
+  pages={420--428},
+  year={1979},
+  publisher={American Psychological Association}
+}
+
+@article{McGrawWong1996,
+  title={Forming inferences about some intraclass correlation coefficients},
+  author={McGraw, Kenneth O. and Wong, S. P.},
+  journal={Psychological Methods},
+  volume={1},
+  number={1},
+  pages={30--46},
+  year={1996},
+  publisher={American Psychological Association}
+}
+@article{KooLi2016,
+  title={A Guideline of Selecting and Reporting Intraclass Correlation Coefficients for Reliability Research},
+  author={Koo, Terry K. and Li, Mae Y.},
+  journal={Journal of Chiropractic Medicine},
+  volume={15},
+  number={2},
+  pages={155--163},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{Cicchetti1994,
+  title={Guidelines, criteria, and rules of thumb for evaluating normed and standardized assessment instruments in psychology},
+  author={Cicchetti, Domenic V.},
+  journal={Psychological Assessment},
+  volume={6},
+  number={4},
+  pages={284--290},
+  year={1994},
+  publisher={American Psychological Association}
+}
+
+@article{LandisKoch1977,
+  title={The measurement of observer agreement for categorical data},
+  author={Landis, J. Richard and Koch, Gary G.},
+  journal={Biometrics},
+  volume={33},
+  number={1},
+  pages={159--174},
+  year={1977},
+  publisher={JSTOR}
+}
+
+@article{Weir2005,
+  title={Quantifying test-retest reliability using the intraclass correlation coefficient and the SEM},
+  author={Weir, Joseph P.},
+  journal={Journal of Strength and Conditioning Research},
+  volume={19},
+  number={1},
+  pages={231--240},
+  year={2005}
+}
+
+
+@article{Steffen2008_MDC_TUG_parkinsonism,
+  title   = {Test-Retest Reliability and Minimal Detectable Change on Balance and Ambulation Tests, the 36-Item Short-Form Health Survey, and the Unified Parkinson Disease Rating Scale in People With Parkinsonism},
+  author  = {Steffen, Teresa and Seney, Michael},
+  journal = {Physical Therapy},
+  volume  = {88},
+  number  = {6},
+  pages   = {733--746},
+  year    = {2008},
+  doi     = {10.2522/ptj.20070214},
+  note    = {Incluye estimaciones de MDC para TUG en población con parkinsonismo.},
+  url     = {https://pubmed.ncbi.nlm.nih.gov/18356292/}
+}
+
+
+@article{Huang2011_MDC_TUG_PD,
+  title   = {Minimal Detectable Change of the Timed {``Up \& Go''} Test and the Dynamic Gait Index in People With Parkinson Disease},
+  author  = {Huang, Sheau-Ling and Hsieh, Ching-Lin and Wu, Ruey-Meei and Tai, Chun-Hwei and Lin, Chin-Hsien and Lu, Wen-Shian},
+  journal = {Physical Therapy},
+  volume  = {91},
+  number  = {1},
+  pages   = {114--121},
+  year    = {2011},
+  doi     = {10.2522/ptj.20090126},
+  url     = {https://pubmed.ncbi.nlm.nih.gov/20947672/}
+}
+
+
+@article{Ries2009_MDC_TUG_Alzheimer,
+  title   = {Test-Retest Reliability and Minimal Detectable Change Scores for the Timed {``Up \& Go''} Test, the Six-Minute Walk Test, and Gait Speed in People With Alzheimer Disease},
+  author  = {Ries, Julie D. and Echternach, Jean L. and Nof, Linda and Gagnon Blodgett, Mary},
+  journal = {Physical Therapy},
+  volume  = {89},
+  number  = {6},
+  pages   = {569--579},
+  year    = {2009},
+  url     = {https://pubmed.ncbi.nlm.nih.gov/19389792/}
+}
